--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,15 +33,20 @@
   </head>
   <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow" style="justify-content: space-between;">
   <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="https://www.tegnology.dk"><img src="{% static 'assets/logo.png' %}" style="width: 100%; max-width: 300px"/></a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="nav-link px-3" href="#" align="left" style="color:#fff;font-size:x-large;">Production Dashboard</a>
+  <a class="nav-link" href="#" align="left" style="color:#fff;font-size:x-large;">Production Dashboard</a>
   <div class="navbar-nav">
+    
     <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href="#">Sign out</a>
+        {% if user.is_authenticated %}
+        <a class="nav-link px-3" href="{% url 'profile' %}"><span data-feather="user"></span> {{user.username}}</a>
+        {% else %}
+        <a class="nav-link px-3" href="{% url 'login' %}"><span data-feather="log-in"></span> Log In</a>
+        {% endif %}
     </div>
   </div>
 </header>
