--- a/core/templates/components/entry_table.html
+++ b/core/templates/components/entry_table.html
@@ -4,6 +4,7 @@
     data-toggle="table" 
     data-pagination="true"
     data-page-list="[10, 25, 50, 100, all]"
+    data-multiple-select-row="false"
     data-click-to-select="true"
     id="{{id}}"> 
       <thead>
