--- a/core/templates/components/order_table.html
+++ b/core/templates/components/order_table.html
@@ -1,17 +1,24 @@
 {% load static %}
 <div class="table-responsive">
-    <table class="table table-striped table-sm">
+    <table class="table table-striped table-sm"
+    id="table"
+    data-toggle="table" 
+    data-pagination="true"
+    data-page-list="[10, 25, 50, 100, all]"
+    >
       <thead>
         <tr>
+          <th scope="col" data-visible="false">id</th>
           {% for key in keys %}
-          <th scope="col">{{key}}</th>
+          <th scope="col" data-sortable="true">{{key}}</th>
           {% endfor %}
         </tr>
       </thead>
       <tbody>
         {% for row in data %}
         <tr>
-            <td><a href="{{row.0.0}}" title="Edit in Pipedrive">{{row.0.1}}</a></td>
+            <td>{{row.0.0}}</td>
+            <td><a href="{{row.0.1}}" title="Edit in Pipedrive">{{row.0.2}}</a></td>
             {% for cell in row %}
             {% if not forloop.first %}
             <td>{{cell}}</td>
@@ -22,4 +29,3 @@
       </tbody>
     </table>
   </div>
-<script src="{% static 'js/order_table.js' %}"></script>
