--- a/core/templates/components/entry_table.html
+++ b/core/templates/components/entry_table.html
@@ -6,7 +6,7 @@
     data-page-list="[10, 25, 50, 100, all]"
     data-multiple-select-row="false"
     data-click-to-select="true"
-    id="{{id}}"> 
+    id="entrytable"> 
       <thead>
         <tr>
           <th></th>
