--- a/core/templates/documents/invoice.html
+++ b/core/templates/documents/invoice.html
@@ -118,16 +118,14 @@
 				</tr>
 
 				<tr class="information">
-					<td colspan="2">
+					<td colspan="1">
 						<table>
 							<tr>
 								<td>
-									{{invoice.order.customer.address|safe}}
-								</td>
-
-								<td>
 									{{invoice.order.customer.name}}<br />
-									{{invoice.contact_person}}<br />
+									{{invoice.order.customer.address|safe}}<br />
+									{{invoice.order.customer.cvr}}<br />
+									Attn: {{invoice.contact_person}}<br />
 									{{invoice.contact_email}}
 								</td>
 							</tr>
