--- a/core/templates/components/purchase_table.html
+++ b/core/templates/components/purchase_table.html
@@ -2,25 +2,19 @@
 <div class="table-responsive">
     <table class="table table-striped table-sm" 
     data-toggle="table" 
-    data-pagination="true"
-    data-page-list="[10, 25, 50, 100, all]"
-    data-click-to-select="true"
     id="{{id}}"> 
       <thead>
         <tr>
           <th scope="col" data-visible="false">id</th>
-          <th data-field="state" data-checkbox="true"></th>
           {% for key in keys %}
-          <th scope="col" data-sortable="true">{{key}}</th>
+          <th scope="col">{{key}}</th>
           {% endfor %}
-          
         </tr>
       </thead>
       <tbody>
         {% for row in data %}
         <tr>
           <td>{{row.0}}</td>
-          <td></td>
             {% for cell in row %}
             {% if not forloop.first %}
             <td>{{cell|safe}}</td>
