--- a/core/templates/orders.html
+++ b/core/templates/orders.html
@@ -6,37 +6,9 @@
 </div> 
 {{orders|safe}}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Invoice</h1>
-    <div class="btn-toolbar" role="toolbar">
-        <div class="btn-group px-1">
-            <button type="button" class="btn btn-sm btn-outline-secondary px-3" data-bs-toggle="modal" data-bs-target="#editInvoiceModal"><span data-feather="edit-3"></span> Edit Invoice Data</button>
-        </div>
-        <div class="btn-group px-1">
-            <a id='edit-customer' href="{% url 'edit_customer' %}" data-popup-url="{% url 'edit_customer' %}"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="user"></span> Edit Customer Data</button></a>
-        </div>
-    </div>
-</div> 
-<p align="center"><iframe id='invoice' src="" width="95%" height=700vh></iframe></p>
-
-<div class="modal fade" id="editCustomerModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <form method="POST" class="modal-content">
-            {% csrf_token %}
-            <input type="hidden" name="form_id" value="edit_customer">
-            <input type="hidden" name="id" id="customer-id" value="">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit Customer Data</h5>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-            </div>
-        </form>
-      </div>
-</div>
+{% if selected_order != None %}
+{% include 'components/order_detail.html' %}
+{% endif %}
 </div>
 {% endblock %}
 {% block script %}
@@ -44,15 +16,28 @@
 $('#table').on('click-row.bs.table', function (row,$el,field) {
     var static_url="{% get_static_prefix %}";
     var filename = "assets/invoices/invoice-"+$el[0]+".pdf#navpanes=0"; 
-    document.getElementById('invoice').src = static_url+filename;
-    document.getElementById('customer-id').value =$el[0];
-    $(".selected").removeClass("selected");
-    field[0].classList.add('selected');
+    //document.getElementById('invoice').src = static_url+filename;
+    
+    //append query to url on select row to trigger 
+    var url=window.location.href,
+    url = (url.indexOf("/id=")===-1)?url:url.slice(0,url.indexOf("/id=")),
+    newUrl=url+"/id="+$el[0];
+    window.location.href =newUrl;
+
 })
 
-$(document).on("click", ".edit-customer", function (e) {
+$(document).on("click", ".edit-order", function (e) {
     e.preventDefault();
-    var $popup = $("#editCustomerModal");
+    var $popup = $("#editOrderModal");
+    var popup_url = $(this).data("popup-url");
+    $(".modal-body", $popup).load(popup_url, function () {
+    $popup.modal("show");
+    });
+    });
+
+$(document).on("click", ".edit-status", function (e) {
+    e.preventDefault();
+    var $popup = $("#editStatusModal");
     var popup_url = $(this).data("popup-url");
     $(".modal-body", $popup).load(popup_url, function () {
     $popup.modal("show");
