--- a/core/templates/documents/invoice.html
+++ b/core/templates/documents/invoice.html
@@ -175,7 +175,7 @@
 									{{tegnology.address|safe}}
 								</td>
 
-								<td>
+								<td style="text-align: left;">
 									Bank account: {{tegnology.bank_account}}<br/>
 									IBAN: {{tegnology.IBAN}}<br/>
 									SWIFT/BIC: {{tegnology.SWIFT_BIC}}<br/>
