--- a/core/templates/file_generate.html
+++ b/core/templates/file_generate.html
@@ -19,7 +19,7 @@
         <h5><b>Customer: </b>{{customer.name}}</h5>
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group px-1">
-                <a class='edit-customer' id='edit-customer' href="/customers/{{customer.id}}/edit" data-popup-url="/customers/{{customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="edit-3"></span></button></a>
+                <a class='edit-customer' id='edit-customer' href="/customers/{{customer.id}}/edit" data-popup-url="/customers/{{customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="edit-3"></span> Edit Customer Info</button></a>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group px-1 ">
-                <button type="submit" name="refresh" class="btn btn-sm btn-outline-secondary"><span data-feather="refresh-cw"></span></button>
+                <button type="submit" name="refresh" class="btn btn-sm btn-outline-secondary"><span data-feather="refresh-cw"></span> Refresh</button>
             </div>
             <div class="btn-group px-1 ">
                 <button type="submit" name="save" class="btn btn-sm btn-outline-secondary"><span data-feather="save"></span> Save</button>
