--- a/core/templates/orders.html
+++ b/core/templates/orders.html
@@ -1,38 +1,134 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load tags %}
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Orders</h1>
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+            <div class="btn-group">
+                <button type="button" class="btn btn-secondary"><span data-feather="list"></span> Sort by</button>
+                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="sr-only"></span>
+                </button>
+                <div class="dropdown-menu">
+                  {% for key, label in sort_options.items %}
+                  {% if key == sortby %}
+                    <a class="nav-link active sort-option" aria-current="page" href="" name="{{key}}">{{label}}</a>
+                  {% else %}
+                    <a class="nav-link sort-option" name="{{key}}" href="">{{label}}</a>
+                  {% endif %}
+                  {% endfor %}
+                </div>
+              </div>
+        </div>
+        <div class="btn-group px-1">
+            <div class="btn-group">
+                <button type="button" class="btn btn-secondary"><span data-feather="filter"></span> Filter</button>
+                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="sr-only"></span>
+                </button>
+                <div class="dropdown-menu">
+                  {% for key, label in filter_options.items %}
+                  {% if key == filterby %}
+                    <a class="nav-link active filter-option" href="" aria-current="page" name="{{key}}">{{label}}</a>
+                  {% else %}
+                    <a class="nav-link filter-option" href="" name="{{key}}">{{label}}</a>
+                  {% endif %}
+                  {% endfor %}
+                </div>
+              </div>
+        </div>
+    </div>
 </div> 
+
 {{orders|safe}}
 
 {% if selected_order != None %}
-{% include 'components/order_detail.html' %}
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 id='order-name' class="h2">{{selected_order.name}}</h1>
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+            <a href="/orders/{{selected_order.pipedrive_id}}"><button type="button" class="btn btn-sm btn-secondary"> Go To Order Page <span data-feather="arrow-right-circle"></span></button></a>
+        </div>
+    </div>
+</div> 
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
+    {% if selected_order.status == 6 %}
+    <h4 class="h6">status: <span style="color:green;">{{selected_order.get_status}}</span> <i>&nbsp;{{selected_order.status_date}}</i></h4>
+    {% else %}
+    <h4 class="h6">status: <span style="color:#bc2a1a;">{{selected_order.get_status}}</span> <i>&nbsp;{{selected_order.status_date}}</i></h4>
+    {% endif %}
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+            <a class='edit-status' id='edit-status' href="/orders/{{selected_order.pipedrive_id}}/edit_status" data-popup-url="/orders/{{selected_order.pipedrive_id}}/edit_status"><button type="button" class="btn btn-sm btn-outline-secondary"> <span data-feather="clock"></span> Edit Status</button></a>
+        </div>
+    </div>
+</div> 
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
+    <h4 class="h6">customer: {{selected_order.customer.name}}</h4>
+</div>
+{{purchases|safe}}
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h4 class="h5">Files</h4>
+</div> 
+<ul class="list-group pb-3">
+    {% for filetype,file_obj in files.items %}
+    {% if file_obj is not None %}
+    <li class="list-group-item">
+        <a target="_blank" href="/orders/{{selected_order.pipedrive_id}}/{{filetype}}">{{filetype|as_title}}</a> 
+        {% if file_obj.sent_date is not None %}
+        <i>&nbsp; sent {{file_obj.sent_date}}</i>
+        {% endif %}
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
 {% endif %}
+</div>
+<div class="modal fade" id="editStatusModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form method="POST" class="modal-content">
+            {% csrf_token %}
+            <input type="hidden" name="form_id" value="edit_order_status">
+            <div class="modal-header">
+              <h5 class="modal-title">Edit Order Status</h5>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
+            </div>
+        </form>
+      </div>
+</div>
 </div>
 {% endblock %}
 {% block script %}
 <script>
 $('#table').on('click-row.bs.table', function (row,$el,field) {
-    var static_url="{% get_static_prefix %}";
-    var filename = "assets/invoices/invoice-"+$el[0]+".pdf#navpanes=0"; 
-    //document.getElementById('invoice').src = static_url+filename;
-    
     //append query to url on select row to trigger 
-    var url=window.location.href,
-    url = (url.indexOf("/id=")===-1)?url:url.slice(0,url.indexOf("/id=")),
-    newUrl=url+"/id="+$el[0];
-    window.location.href =newUrl;
-
+    var url=window.location.href;
+    const urlParams = new URLSearchParams(window.location.search);
+    urlParams.set('id',$el[0]);
+    window.location.search = urlParams;
 })
 
-$(document).on("click", ".edit-order", function (e) {
+$(document).on("click", ".filter-option", function (e) {
     e.preventDefault();
-    var $popup = $("#editOrderModal");
-    var popup_url = $(this).data("popup-url");
-    $(".modal-body", $popup).load(popup_url, function () {
-    $popup.modal("show");
+    var url=window.location.href;
+    const urlParams = new URLSearchParams(window.location.search);
+    urlParams.set('filter', $(this).attr('name'));
+    window.location.search = urlParams;
     });
+
+$(document).on("click", ".sort-option", function (e) {
+    e.preventDefault();
+    var url=window.location.href;
+    const urlParams = new URLSearchParams(window.location.search);
+    urlParams.set('sort', $(this).attr('name'));
+    window.location.search = urlParams;
     });
 
 $(document).on("click", ".edit-status", function (e) {
@@ -43,5 +139,9 @@ $(document).on("click", ".edit-status", function (e) {
     $popup.modal("show");
     });
     });
+
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
 </script>
 {% endblock %}
