--- a/core/templates/documents/delivery_notice.html
+++ b/core/templates/documents/delivery_notice.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>TEGnology invoice template</title>
+		<title>TEGnology delivery notice template</title>
 
 		<style>
 			.invoice-box {
@@ -102,31 +102,30 @@
 								<td class="title">
 									<img
 										src="{{logo_path}}"
-										style="width: 100%; max-width: 300px"
+										style="width: 100%; max-width: 300px;"
 									/>
 								</td>
 								<td></td>
 								<td style="text-align:right;">
-									Invoice #: {{invoice.invoice_number}}<br />
-									Created: {{invoice.created_date}}<br />
-									Payment Terms: Next 30 days
+									Order Number: {{delivery_notice.order_number}}<br />
+									Date: {{delivery_notice.created_date}}<br />
 								</td>
 							</tr>
 						</table>
 					</td>
 				</tr>
+                
 
 				<tr class="information">
-					<td colspan="2">
+					<td colspan="1">
 						<table>
 							<tr>
 								<td>
-									<h2>Invoice</h2><br/>
-									<b>{{customer.name}}</b><br/>
-									{{customer.address|linebreaks}}
-									CVR: {{customer.cvr}}<br/>
-									Attn: {{invoice.contact_person}}<br/>
-									{{invoice.contact_email}}
+									<h2>Delivery Notice</h2><br/>
+									<b>{{customer.name}}</b><br />
+									{{customer.address|linebreaks}}<br />
+									Attn: {{delivery_notice.contact_person}}<br />
+									{{delivery_notice.contact_email}}
 								</td>
 								<td>
 									<h2> </h2><br/><br/><br/>
@@ -139,6 +138,19 @@
 						</table>
 					</td>
 				</tr>
+
+                <tr class="information">
+					<td colspan="1">
+						<table>
+							<tr>
+								<td>
+									{{delivery_notice.message|linebreaks}}
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+            
 
 				<tr class="heading">
 					<td>Item</td>
@@ -160,22 +172,10 @@
 
 				<tr class="total">
 					<td></td>
-					<td>Total ex. VAT:</td>
-					<td>{{invoice.total}}</td>
+					<td>Total:</td>
+					<td>{{delivery_notice.total}}</td>
 				</tr>
 
-				<tr class="total">
-					<td></td>
-					<td>VAT {{invoice.vat}}%:</td>
-					<td>{{invoice.vat_amt}}</td>
-				</tr>
-
-				<tr class="total">
-					<td></td>
-					<td>Total inc. VAT:</td>
-					<td>{{invoice.total_vat}}</td>
-				</tr>
-				
 				
                 <tr class="information">
 					<td colspan="3">
@@ -184,19 +184,11 @@
 								<td>
 									{{tegnology.address|safe}}
 								</td>
-
-								<td style="text-align: left;">
-									Bank account: {{tegnology.bank_account}}<br/>
-									IBAN: {{tegnology.IBAN}}<br/>
-									SWIFT/BIC: {{tegnology.SWIFT_BIC}}<br/>
-                                    {{tegnology.bank_name}}
-								</td>
-
-                                <td style="text-align: right;">
+								<td></td>
+                                <td style="text-align:right;">
 									CVR: {{tegnology.cvr}}<br/>
-									EORI: DK{{tegnology.cvr}}<br/>
 									phone: {{tegnology.phone}}<br/>
-									e-mail: {{tegnology.email}} <br/>
+									e-mail: {{delivery_notice.sender_email}} <br/>
 								</td>
 							</tr>
 						</table>
