--- a/core/templates/file_generate.html
+++ b/core/templates/file_generate.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
+{% load tags %}
 {% block content %}
 <div class="d-flex flex-wrap flex-md-nowrap align-items-center py-2">
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group px-1">
-            <a href="/orders/{{pipedrive_id}}" ><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="arrow-left"></span>Back to Order</button></a>
+            {% if selected_order.status == 0 %}
+                <a href="/deals/{{pipedrive_id}}" ><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="arrow-left"></span>Back to Deal</button></a>
+            {% else %}
+                <a href="/orders/{{pipedrive_id}}" ><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="arrow-left"></span>Back to Order</button></a>
+            {% endif %}
         </div>
     </div>
 </div>
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-2 mb-3 border-bottom">
     
-    <h1 id='order-name' class="h2"> Generate {{filetype}}</h1>
+    <h1 id='order-name' class="h2"> Generate {{filetype|as_title}}</h1>
 </div> 
 <form method="POST">
     {% csrf_token %}
@@ -19,7 +24,7 @@
         <h5><b>Customer: </b>{{customer.name}}</h5>
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group px-1">
-                <a class='edit-customer' id='edit-customer' href="/customers/{{customer.id}}/edit" data-popup-url="/customers/{{customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="edit-3"></span> Edit Customer Info</button></a>
+                <a class='edit-customer' id='edit-customer' href="/customers/{{customer.id}}/edit" data-popup-url="/customers/{{customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="user"></span> Edit Customer Info</button></a>
             </div>
         </div>
     </div>
@@ -37,24 +42,7 @@
 </form>
 <p align="center"><iframe id='invoice' src="{{filepath}}#toolbar=0&navpanes=0&scrollbar=0" width="95%" height=700vh></iframe></p>
 
-<div class="modal fade" id="editCustomerModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <form method="POST" class="modal-content">
-            {% csrf_token %}
-            <input type="hidden" name="form_id" value="edit_customer">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit Customer Data</h5>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-            </div>
-        </form>
-      </div>
-</div>
-</div>
+{% include 'components/modals/edit-customer-modal.html' %}
 {% endblock %}
 {% block script %}
 <script>
