--- a/core/templates/order_detail.html
+++ b/core/templates/order_detail.html
@@ -25,11 +25,19 @@
     background-color: #bc2a1a;
     }
 </style>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+            <a href="../orders"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="arrow-left-circle"></span> Back to Orders</button></a>
+        </div>
+    </div>
+</div>
+
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 id='order-name' class="h2">{{selected_order.name}}</h1>
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group px-1">
-            <a class='edit-order' id='edit-order' href="/orders/{{selected_order.pipedrive_id}}/edit_meta" data-popup-url="/orders/{{selected_order.pipedrive_id}}/edit_meta"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="edit-3"></span> Edit Order Details</button></a>
+            <a class='edit-order' id='edit-order' href="/orders/{{selected_order.pipedrive_id}}/edit_meta" data-popup-url="/orders/{{selected_order.pipedrive_id}}/edit_meta"><button type="button" class="btn btn-sm btn-outline-secondary"> <span data-feather="edit-3"></span> Edit Order Details</button></a>
         </div>
     </div>
 </div> 
@@ -47,7 +55,20 @@
 </div> 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
     <h4 class="h6">customer: {{selected_order.customer.name}}</h4>
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+            <a class='edit-customer' id='edit-customer' href="/customers/{{selected_order.customer.id}}/edit" data-popup-url="/customers/{{selected_order.customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="user"></span> Edit Customer Info</button></a>
+        </div>
+    </div>
 </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
+    <h4 class="h6">total value: {{selected_order.currency}} {{selected_order.total}}</h4>
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group px-1">
+          <a href="{{selected_order.get_edit_url}}"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="database"></span> Edit Line Items in Pipedrive</button></a>
+        </div>
+    </div>
+  </div> 
 {{purchases|safe}}
 <div class="container py-3 ">
     <div class="row status-components">
@@ -60,92 +81,11 @@
         <div class="col-11">
             {% for filetype, file_obj in files.items %}
                 <div class="status-checkpoint">
-                    {% if file_obj is not None %}
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-2">
-                        <h1 class="h2">{{filetype|as_title}}</h1>
-                            <div class="btn-toolbar" role="toolbar">
-                                <div class="btn-group px-1">
-                                    <a href="/orders/{{selected_order.pipedrive_id}}/{{filetype}}" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="eye"></span> View File</button></a>
-                                </div>
-                                <div class="btn-group px-1">
-                                    <form method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="form_id" value="delete_file">
-                                        <input type="hidden" name="filetype" value="{{filetype}}">
-                                        <input type="hidden" name ="pk" id="pk" value="{{selected_order.pipedrive_id}}">
-                                        <button type="submit" class="btn btn-sm btn-outline-danger"><span data-feather="trash"></span> Delete file</button>
-                                    </form>
-                                </div>
-                            </div>
-                    </div>
-                    {% if file_obj.sent_date is None %}
-                    <form method="POST">
-                        {% csrf_token %}
-                        <input type="hidden" name="form_id" value="set_date">
-                        <input type="hidden" name="filetype" value="{{filetype}}">
-                        <input type="hidden" name ="pk" id="pk" value="{{selected_order.pipedrive_id}}">
-                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-2 border-bottom">
-                            {% with forms=file_form|key:filetype %}
-                            {{forms.date.as_p}}
-                            {% endwith %}
-                            <div class="btn-toolbar" role="toolbar">
-                                <div class="btn-group px-1">
-                                    <button type="submit" class="btn btn-sm btn-outline-success"><span data-feather="send"></span> Mark as Sent</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+                    {% if filetype == 'purchase_order' %}
+                    {% include 'components/purchase_order_checkpoint.html' %}
                     {% else %}
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-2 border-bottom">
-                        <h4 class="h6" id="order-status">sent date: {{file_obj.sent_date}}</h4>
-                        <div class=class="btn-toolbar" role="toolbar">
-                            <form method="POST">
-                                {% csrf_token %}
-                                <input type="hidden" name="form_id" value="undo_set_date">
-                                <input type="hidden" name="filetype" value="{{filetype}}">
-                                <input type="hidden" name ="pk" id="pk" value="{{selected_order.pipedrive_id}}">
-                                <div class="btn-group px-1">
-                                    <button type="submit" class="btn btn-sm btn-outline-secondary"><span data-feather="rotate-ccw"></span> Undo Mark as Sent</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+                    {% include 'components/file_checkpoint.html' %}
                     {% endif %}
-                {% else %}
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-3">
-                        <h1 class="h2">{{filetype|as_title}}</h1>
-                        <div class="btn-toolbar" role="toolbar">
-                            <div class="btn-group px-1">
-                                <a href="/orders/{{selected_order.pipedrive_id}}/{{filetype}}/generate"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="file-plus"></span> Generate</button></a>
-                            </div>
-                            <div class="btn-group px-1">
-                                <a class='upload-file' id='upload-file' href="/orders/{{selected_order.pipedrive_id}}/{{filetype}}/upload" data-popup-url="/orders/{{selected_order.pipedrive_id}}/{{filetype}}/upload"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="upload"></span> Upload</button></a>
-                            </div>
-                            <div class="modal fade" id="uploadFileModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                  <div class="modal-content">
-                                    <form method="post" class="modal-content" enctype="multipart/form-data">
-                                        {% csrf_token %}
-                                        <div class="modal-header">
-                                            <h5 class="modal-title">Upload {{filetype|as_title}} File</h5>
-                                          </div>
-                                        <input type="hidden" name="form_id" value="upload_file">
-                                        <input type="hidden" name="filetype" value="{{filetype}}">
-                                        <input type="hidden" name ="pk" id="pk" value="{{selected_order.pipedrive_id}}">
-                                        <div class="modal-body"></div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                                            <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-                                        </div>
-                                    </form>
-                                  </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-3 border-bottom">
-                    </div>
-                {% endif %}
                 </div>
             {% endfor %}
             <div class="status-checkpoint">
@@ -185,47 +125,20 @@
         </div>
     </div>
 </div>
-
-
-<div class="modal fade" id="editOrderModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <form method="POST" class="modal-content">
-            {% csrf_token %}
-            <input type="hidden" name="form_id" value="edit_order_meta">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit Order Details</h5>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-            </div>
-        </form>
-      </div>
-</div>
-</div>
-<div class="modal fade" id="editStatusModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <form method="POST" class="modal-content">
-            {% csrf_token %}
-            <input type="hidden" name="form_id" value="edit_order_status">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit Order Status</h5>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-            </div>
-        </form>
-      </div>
-</div>
-</div>
+{% include 'components/modals/edit-order-modal.html' %}
+{% include 'components/modals/edit-status-modal.html' %}
+{% include 'components/modals/edit-customer-modal.html' %}
 {% endblock %}
 {% block script %}
 <script>
+$(document).on("click", ".edit-customer", function (e) {
+    e.preventDefault();
+    var $popup = $("#editCustomerModal");
+    var popup_url = $(this).data("popup-url");
+    $(".modal-body", $popup).load(popup_url, function () {
+    $popup.modal("show");
+    });
+});
 $(document).on("click", ".edit-status", function (e) {
     e.preventDefault();
     var $popup = $("#editStatusModal");
@@ -246,7 +159,7 @@ $(document).on("click", ".edit-order", function (e) {
 
 $(document).on("click", ".upload-file", function (e) {
     e.preventDefault();
-    var $popup = $("#uploadFileModal");
+    var $popup = $("#upload"+$(this).attr('name')+"Modal");
     var popup_url = $(this).data("popup-url");
     $(".modal-body", $popup).load(popup_url, function () {
     $popup.modal("show");
