--- a/core/templates/orders.html
+++ b/core/templates/orders.html
@@ -66,9 +66,23 @@
     </div>
 </div> 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
-    <h4 class="h6">customer: {{selected_order.customer.name}}</h4>
+  <h4 class="h6">customer: {{selected_order.customer.name}}</h4>
+  <div class="btn-toolbar" role="toolbar">
+      <div class="btn-group px-1">
+          <a class='edit-customer' id='edit-customer' href="/customers/{{selected_order.customer.id}}/edit" data-popup-url="/customers/{{selected_order.customer.id}}/edit"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="user"></span> Edit Customer Info</button></a>
+      </div>
+  </div>
 </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-1">
+  <h4 class="h6">total value: {{selected_order.currency}} {{selected_order.total}}</h4>
+  <div class="btn-toolbar" role="toolbar">
+      <div class="btn-group px-1">
+        <a href="{{selected_order.get_edit_url}}"><button type="button" class="btn btn-sm btn-outline-secondary"><span data-feather="database"></span> Edit Line Items in Pipedrive</button></a>
+      </div>
+  </div>
+</div> 
 {{purchases|safe}}
+
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h4 class="h5">Files</h4>
 </div> 
@@ -77,8 +91,12 @@
     {% if file_obj is not None %}
     <li class="list-group-item">
         <a target="_blank" href="/orders/{{selected_order.pipedrive_id}}/{{filetype}}">{{filetype|as_title}}</a> 
+        {% if filetype == 'purchase_order' %}
+        <i>&nbsp; received {{file_obj.received_date}}</i>
+        {% else %}
         {% if file_obj.sent_date is not None %}
         <i>&nbsp; sent {{file_obj.sent_date}}</i>
+        {% endif %}
         {% endif %}
     </li>
     {% endif %}
@@ -86,24 +104,8 @@
 </ul>
 {% endif %}
 </div>
-<div class="modal fade" id="editStatusModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <form method="POST" class="modal-content">
-            {% csrf_token %}
-            <input type="hidden" name="form_id" value="edit_order_status">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit Order Status</h5>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
-            </div>
-        </form>
-      </div>
-</div>
-</div>
+{% include 'components/modals/edit-status-modal.html' %}
+{% include 'components/modals/edit-customer-modal.html' %}
 {% endblock %}
 {% block script %}
 <script>
@@ -139,7 +141,14 @@ $(document).on("click", ".edit-status", function (e) {
     $popup.modal("show");
     });
     });
-
+$(document).on("click", ".edit-customer", function (e) {
+    e.preventDefault();
+    var $popup = $("#editCustomerModal");
+    var popup_url = $(this).data("popup-url");
+    $(".modal-body", $popup).load(popup_url, function () {
+    $popup.modal("show");
+    });
+});
 $(function () {
   $('[data-toggle="tooltip"]').tooltip()
 })
