--- a/core/templates/documents/delivery_notice.html
+++ b/core/templates/documents/delivery_notice.html
@@ -157,7 +157,7 @@
 
 					<td>Quantity</td>
 
-					<td>Price</td>
+					<td style="width: 120px;">Price</td>
 				</tr>
 				
 				{% for item in line_items %}
@@ -173,7 +173,7 @@
 				<tr class="total">
 					<td></td>
 					<td>Total:</td>
-					<td>{{delivery_notice.total}}</td>
+					<td>{{currency}} {{total}}</td>
 				</tr>
 
 				
