--- a/core/templates/documents/order_confirmation.html
+++ b/core/templates/documents/order_confirmation.html
@@ -156,7 +156,7 @@
 
 					<td>Quantity</td>
 
-					<td>Price</td>
+					<td style="width: 120px;">Price</td>
 				</tr>
 				
 				{% for item in line_items %}
@@ -172,19 +172,19 @@
 				<tr class="total">
 					<td></td>
 					<td>Total ex. VAT:</td>
-					<td>{{order_confirmation.total}}</td>
+					<td>{{currency}} {{total}}</td>
 				</tr>
 
 				<tr class="total">
 					<td></td>
-					<td>VAT {{order_confirmation.vat}}%:</td>
-					<td>{{order_confirmation.vat_amt}}</td>
+					<td>VAT {{vat}}%:</td>
+					<td>{{currency}} {{vat_amt}}</td>
 				</tr>
 
 				<tr class="total">
 					<td></td>
 					<td>Total inc. VAT:</td>
-					<td>{{order_confirmation.total_vat}}</td>
+					<td>{{currency}} {{total_vat}}</td>
 				</tr>
 				
 				<tr class="information">
@@ -193,7 +193,7 @@
 							<tr>
 								<td> The quoted price includes shipment.<br/>
                                     Est. Delivery Time: {{quotation.est_delivery_time}} <br/>
-                                    All prices are in {{order_confirmation.currency}} and excl. VAT <br/>
+                                    All prices are in {{currency}} and excl. VAT <br/>
                                     Terms and Conditions according to Orgalime S2022 <br/>
                                 </td>
 							</tr>
