--- a/core/templates/documents/quotation.html
+++ b/core/templates/documents/quotation.html
@@ -159,7 +159,7 @@
 
 					<td>Quantity</td>
 
-					<td>Price</td>
+					<td style="width: 120px;">Price</td>
 				</tr>
 				
 				{% for item in line_items %}
@@ -175,7 +175,7 @@
 				<tr class="total">
 					<td></td>
 					<td>Total:</td>
-					<td>{{quotation.total}}</td>
+					<td>{{currency}} {{total}}</td>
 				</tr>
 
 				
@@ -185,7 +185,7 @@
 							<tr>
 								<td> The quoted price includes shipment.<br/>
                                     Est. Delivery Time: {{quotation.est_delivery_time}} <br/>
-                                    All prices are in {{quotation.currency}} and excl. VAT <br/>
+                                    All prices are in {{currency}} and excl. VAT <br/>
                                     Terms and Conditions according to Orgalime S2022 <br/>
                                 </td>
 							</tr>
