--- a/core/templates/documents/order_confirmation.html
+++ b/core/templates/documents/order_confirmation.html
@@ -116,20 +116,20 @@
 				</tr>
 
 				<tr class="information">
-					<td colspan="1">
+					<td colspan="2">
 						<table>
 							<tr>
-								<td>
+								<td style="padding-right: 10px;">
 									<h2>Order Confirmation</h2><br/>
-									<b>{{customer.name}}</b><br/>
+									<h4>{{customer.name}}</h4>
 									{{customer.address|linebreaks}}
 									CVR: {{customer.cvr}}<br/>
 									Attn: {{order_confirmation.contact_person}}<br/>
 									{{order_confirmation.contact_email}}
 								</td>
-								<td>
-									<h2> </h2><br/><br/><br/>
-									Shipping Address (if different from billing address):<br/>
+								<td style="text-align: left;">
+									<h2></h2><br/>
+									<p style="padding-top: 49px; padding-bottom: 3px;">Shipping Address (if different from billing address):</p>
 									{% if customer.shipping_address is not None %}
 									{{customer.shipping_address|linebreaks}}
 									{% endif %}
@@ -154,7 +154,7 @@
 				<tr class="heading">
 					<td>Item</td>
 
-					<td>Quantity</td>
+					<td style="width: 120px;">Quantity</td>
 
 					<td style="width: 120px;">Price</td>
 				</tr>
